fixed toggle mode button spacing

--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -11,11 +11,6 @@ header {
     background-color: #f1f1f1;
 }
 
-header button {
-    margin-left: 10px;
-}
-
-
 button {
     padding: 10px;
     background-color: #4CAF50;
